--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analysis Results - Network Impact Analysis</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+   <script src="/static/js/chart.umd.min.js"></script>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/dashboard.css">
     <link rel="stylesheet" href="/static/css/dashboard-o.css">
@@ -731,7 +731,7 @@
         </div>
     </div>
 
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="/static/js/d3.v7.min.js"></script>
     <script src="/static/js/script.js"></script>
     <script src="/static/js/dashboard.js"></script>
     <script src="/static/js/dashboard-o.js"></script>
